<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Social Saver</string>
    <string name="title_section1">Submit</string>
    <string name="SS_name">Social Saver</string>
    <string name="title_section2">Friends</string>
    <string name="title_section3">Deals</string>
    <string name="title_section4">Profile</string>
    <string name="title_section5">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_page">LoginPage</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_dispatch">DispatchActivity</string>
    <string name="title_activity_sign_up_user">SignUpUser</string>
    <string name="Logout_action">Logout</string>
    <string name="title_activity_second_page">SecondPage</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_friends">Friends</string>
    <string name="title_activity_find_friends">FindFriends</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_activity_friends_list">FriendsList</string>
    <string name="title_activity_friends_more_info">FriendsMoreInfo</string>
    <string name="title_activity_friends_adapter">FriendsAdapter</string>
    <string name="title_activity_single_friend_view">SingleFriendView</string>
    <string name="title_activity_current_deals_more_info">CurrentDealsMoreInfo</string>
    <string name="title_activity_deals_adapter">DealsAdapter</string>
    <string name="title_activity_wanted_deals_more_info">WantedDealsMoreInfo</string>
    <string name="title_activity_wanted_deals_adapter">WantedDealsAdapter</string>
    <string name="title_activity_deal_report">DealReport</string>
    <string name="title_activity_map_view">MapView</string>
    <string name="title_activity_map_pin_point">MapPinPoint</string>
    <string name="login_string">Login</string>
    <string name="register_string">Register</string>
    <string name="refresh_string">Refresh</string>
    <string name="settings_string">Settings</string>
    <string name="logout_string">Logout</string>
    <string name="price_string">Price: $</string>
    <string name="deals_string">Deals</string>
    <string name="addafriend_string">Add A Friend</string>
    <string name="addfriend_string">Add Friend</string>
    <string name="viewfriend_string">View Friends</string>
    <string name="locationnotavil_string">Location not available since the location is online</string>
    <string name="submit_string">Submit</string>
    <string name="currentdeals_string">Current Deals</string>
    <string name="my_wanteddeals_string">My Wanted Deals</string>
    <string name="name_string">Name: </string>
    <string name="email_string">Email: </string>
    <string name="reportcount_string">Report Count: </string>
    <string name="password_string">Password</string>
    <string name="confirmpass_string">Confirm Password</string>
    <string name="cancel_string">Cancel</string>
    <string name="maxprice_string">Max Price: $</string>
    <string name="email_address_string">Email Address</string>
    <string name="forgotpass_string">Forgot Password?</string>
    <string name="founddeal_string">Found Deal</string>
    <string name="item_string">Item: </string>
    <string name="homepage_string">Home Page</string>
    <string name="wanteddeals_string">Wanted Deal</string>
    <string name="salesreport_string">Sales Reports:</string>
    <string name="online_string">Online</string>
    <string name="instore_string">In-Store</string>
    <string name="rating_string">Rating: </string>
    <string name="removefriend_string">Remove Friend</string>
    <string name="saleenddate_string">Sale End Date:</string>
    <string name="dateexample_string">02/25/2015</string>
    <string name="found_string">Found: </string>
    <string name="location_string">Location: </string>
    <string name="ss_image">ss image</string>
    <string name="title_activity_hscreen">HScreen</string>






</resources>
