<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/titlelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_string" />

    <TextView
        android:id="@+id/itemWANTEDTVSET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/titlelabel" />

    <TextView
        android:id="@+id/userlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titlelabel"
        android:text="@string/email_string" />

    <TextView
        android:id="@+id/priceWANTEDTVSET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemWANTEDTVSET"
        android:layout_toRightOf="@+id/userlabel" />

    <TextView
        android:id="@+id/catagorylabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userlabel"
        android:text="@string/rating_string" />

    <TextView
        android:id="@+id/foundTVSET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/priceWANTEDTVSET"
        android:layout_toRightOf="@+id/catagorylabel" />

    <TextView
        android:id="@+id/pricelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/catagorylabel"
        android:text="@string/reportcount_string" />

    <TextView
        android:id="@+id/reporttitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/foundTVSET"
        android:layout_toRightOf="@+id/pricelabel" />

    <ImageView
        android:id="@+id/ivuserprofile"
        android:src="@drawable/black200"
        android:layout_width="?android:attr/listPreferredItemHeight"
        android:layout_height="?android:attr/listPreferredItemHeight"
		android:layout_alignTop="@id/titlelabel"
		android:layout_alignBottom="@id/pricelabel"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/ss_image"
        android:padding="5dp" />

</RelativeLayout>