<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.gatech.bobsbuilders.socialsaver.HomeScreen$PlaceholderFragment"
    android:id="@+id/homeScren">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dealtyperg"
        android:checkedButton="@+id/wantedButton"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        >

        <RadioButton
            android:id="@+id/wantedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wanteddeals_string"
            android:checked="false" />

        <RadioButton
            android:id="@+id/FoundButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/founddeal_string"
            android:checked="false" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/item_string"
        android:id="@+id/textView6"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/dealtyperg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/maxprice_string"
        android:id="@+id/textView7"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/onlineorlocalrb"
        android:checkedButton="@+id/instorebutton"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/salesendtv"
        android:visibility="invisible"
        android:layout_above="@+id/actuallocationtv">

        <RadioButton
            android:id="@+id/onlinebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/online_string"
            android:checked="false" />

        <RadioButton
            android:id="@+id/instorebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instore_string"
            />
    </RadioGroup>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/itemet"
        android:layout_toRightOf="@+id/textView6"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/textView7"
        android:layout_below="@+id/dealtyperg"
        android:inputType="text"/>

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/maxPrice"
        android:layout_alignBottom="@+id/textView7"
        android:layout_toRightOf="@+id/textView7"
        android:layout_toEndOf="@+id/textView7"

        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_string"
        android:id="@+id/SubmitDeal"
        android:background="@drawable/custom_button2"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/itemet"
        android:layout_alignEnd="@+id/itemet"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/saleenddate_string"
        android:id="@+id/salesendtv"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/maxPrice"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/salesendet"
        android:layout_alignBottom="@+id/salesendtv"
        android:layout_alignRight="@+id/itemet"
        android:layout_alignEnd="@+id/itemet"
        android:layout_toRightOf="@+id/salesendtv"
        android:layout_toEndOf="@+id/salesendtv"
        android:hint="@string/dateexample_string"
        android:visibility="invisible"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/found_string"
        android:layout_marginTop="30dp"
        android:id="@+id/foundtv"
        android:layout_below="@+id/salesendtv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/location_string"
        android:id="@+id/actuallocationtv"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/foundtv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/actuallocationet"
        android:layout_alignBottom="@+id/actuallocationtv"
        android:layout_toRightOf="@+id/actuallocationtv"
        android:layout_alignRight="@+id/itemet"
        android:layout_alignEnd="@+id/itemet"
        android:inputType="textVisiblePassword"
        android:visibility="invisible"
        />




</RelativeLayout>