<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/dealsadap">

    <TextView
        android:id="@+id/titlelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_string" />

    <TextView
        android:id="@+id/itemWANTEDTVSET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/titlelabel" />

    <TextView
        android:id="@+id/userlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titlelabel"
        android:text="@string/price_string" />

    <TextView
        android:id="@+id/priceWANTEDTVSET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemWANTEDTVSET"
        android:layout_toRightOf="@+id/userlabel" />

    <TextView
        android:id="@+id/catagorylabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userlabel"
        android:text="@string/found_string" />

    <TextView
        android:id="@+id/foundTVSET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/priceWANTEDTVSET"
        android:layout_toRightOf="@+id/catagorylabel" />

    <TextView
        android:id="@+id/pricelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/catagorylabel"
        android:text="@string/location_string" />

    <TextView
        android:id="@+id/foundLocationTVSET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/foundTVSET"
        android:layout_toRightOf="@+id/pricelabel" />

</RelativeLayout>