<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.gatech.bobsbuilders.socialsaver.Friends$PlaceholderFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/addafriend_string"
        android:id="@+id/textView10"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:layout_marginBottom="60dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/addfriend_string"
        android:id="@+id/addfriendb"
        android:layout_below="@+id/textView10"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:padding="30dp"
        android:layout_marginBottom="15dp"
        android:textColor="#ffffff"
        android:background="@drawable/custom_button"
     />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/viewfriend_string"
        android:id="@+id/ViewFriendsB"
        android:layout_below="@+id/addfriendb"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:padding="30dp"
        android:textColor="#ffffff"
        android:background="@drawable/custom_button2"
        />

</RelativeLayout>
